# argocd-app-sync

./: Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
src/: main.rs
