[package]
name = "argocd-app-sync"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "pleme-io GitHub Action — trigger ArgoCD Application sync + wait for healthy"
license = "MIT"
authors = ["drzzln <drzzln@protonmail.com>"]
repository = "https://github.com/pleme-io/argocd-app-sync"

[[bin]]
name = "argocd-app-sync"
path = "src/main.rs"

[dependencies]
pleme-actions-shared = { git = "https://github.com/pleme-io/pleme-actions-shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[lints.clippy]
pedantic = "warn"
